*****************************************************************************************************
digiKam 2.9.0 - Release date: 2012-09-02

NEW FEATURES:


BUGFIXES FROM KDE BUGZILLA (alias B.K.O | http://bugs.kde.org):

001 ==> 296024 - Undefined symbol in libdigikamcore.so [patch].
002 ==> 291627 - Nef data loss after geotaging.
003 ==> 
